--- a/boniu_guanggao/adsdk/build.gradle
+++ b/boniu_guanggao/adsdk/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 3
-        versionName "1.0.2"
+        versionCode 4
+        versionName "1.0.3"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -49,11 +49,11 @@ uploadArchives { //新增 ，因为Android Studio gradle 支持maven插件，所
                 authentication(userName: 'admin', password: 'admin123')
             }
             pom.project {
-                version '1.0.2' //版本名称
+                version '1.0.3' //版本名称
                 artifactId 'adsdk'  //和前面网站上填写的一样
                 groupId 'com.boniu.ad'  //和前面网站上填写的一样
                 packaging 'aar' //填写aar
-                description '加入开屏激励视频' //更新描述
+                description '基本完成' //更新描述
             }
         }
     }
