--- a/boniu_guanggao/app/build.gradle
+++ b/boniu_guanggao/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.jisuanqi.xiaodong"
+        applicationId "com.treefinance.gongfudai"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
