--- a/boniu_guanggao/build.gradle
+++ b/boniu_guanggao/build.gradle
@@ -18,7 +18,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'http://192.168.10.223:8081/repository/maven-public'}
+        maven { url 'http://nexus.rhinox.cn/repository/maven-public'}
         
     }
 }
