--- a/boniu_guanggao/adsdk/build.gradle
+++ b/boniu_guanggao/adsdk/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 4
-        versionName "1.0.3"
+        versionCode 14
+        versionName "1.1.3"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -33,12 +33,28 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
-    implementation 'com.boniu.ad:gdtsdk:4.251.1121@aar'
-    implementation 'com.boniu.ad:csjsdk:3.1.0.0@aar'
-    api 'com.squareup.okhttp3:okhttp:4.0.1'
-    api 'com.squareup.retrofit2:retrofit:2.5.0'
-    api 'com.squareup.retrofit2:adapter-rxjava:2.5.0'
-    api 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'com.boniu.ad:gdtsdk:4.294.1164@aar'
+    implementation 'com.boniu.ad:csjsdk:3.2.5.1@aar'
+    implementation 'com.squareup.okhttp3:okhttp:4.0.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.5.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
+}
+uploadArchives { //新增 ，因为Android Studio gradle 支持maven插件，所以可以添加此task
+    repositories {
+        mavenDeployer {
+            repository(url: 'http://192.168.10.223:8081/repository/maven-3rd/') {
+                authentication(userName: 'admin', password: 'admin123')
+            }
+            pom.project {
+                version '1.1.3' //版本名称
+                artifactId 'adsdk'  //和前面网站上填写的一样
+                groupId 'com.boniu.ad'  //和前面网站上填写的一样
+                packaging 'aar' //填写aar
+                description '广告加载返回类型' //更新描述
+            }
+        }
+    }
 }
