--- a/boniu_guanggao/adsdk/build.gradle
+++ b/boniu_guanggao/adsdk/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 14
-        versionName "1.1.3"
+        versionCode 15
+        versionName "1.1.4"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -37,7 +37,9 @@ dependencies {
     implementation 'com.boniu.ad:csjsdk:3.2.5.1@aar'
     implementation 'com.squareup.okhttp3:okhttp:4.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.5.0'
+    implementation("com.squareup.retrofit2:adapter-rxjava2:2.2.0")
+            { exclude group: 'com.squareup.okhttp3' }
+//    implementation 'com.squareup.retrofit2:adapter-rxjava:2.5.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -49,11 +51,11 @@ uploadArchives { //新增 ，因为Android Studio gradle 支持maven插件，所
                 authentication(userName: 'admin', password: 'admin123')
             }
             pom.project {
-                version '1.1.3' //版本名称
+                version '1.1.4' //版本名称
                 artifactId 'adsdk'  //和前面网站上填写的一样
                 groupId 'com.boniu.ad'  //和前面网站上填写的一样
                 packaging 'aar' //填写aar
-                description '广告加载返回类型' //更新描述
+                description 'rxjava改成rxjava2' //更新描述
             }
         }
     }
