--- a/boniu_guanggao/app/build.gradle
+++ b/boniu_guanggao/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.treefinance.gongfudai"
+        applicationId "com.joe.holi"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
@@ -62,7 +62,8 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:4.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.5.0'
+    implementation("com.squareup.retrofit2:adapter-rxjava2:2.2.0")
+            { exclude group: 'com.squareup.okhttp3' }
     implementation 'com.google.code.gson:gson:2.8.6'
     api 'com.github.bumptech.glide:glide:4.10.0'
 
