--- a/boniu_guanggao/app/src/main/AndroidManifest.xml
+++ b/boniu_guanggao/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.treefinance.gongfudai" >
+    package="com.joe.holi" >
     <!-- 必要权限 -->
     <uses-permission android:name="android.permission.INTERNET" /> <!-- 可选权限 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:name=".App"
+        android:name="com.joe.holi.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,14 +21,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
 
-        <activity android:name=".SplashActivity" >
+        <activity android:name="com.joe.holi.SplashActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" >
+        <activity android:name="com.joe.holi.MainActivity" >
         </activity>
 
         <service
